kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: NAME-ingress
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: HOST
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: NAME-service
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAME-deployment
  namespace: NAMESPACE
  labels:
    app: NAME
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  replicas: REPLICAS
  selector:
    matchLabels:
      app: NAME
  template:
    metadata:
      labels:
        app: NAME
    spec:
      containers:
        - name: NAME-container
          image: IMAGE
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: NAME-service
  namespace: NAMESPACE
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: NAME
